atualização nas conclusoes dos resultados

--- a/cap-resultados.tex
+++ b/cap-resultados.tex
@@ -301,11 +301,11 @@ A tabela \ref{Tab:time_and_avg} mostra o tempo de uso de recursos, em minutos, s
 \label{Tab:time_and_avg}
 \end{table}
 
-Na rede de processamento desenvolvida para o experimento, os tipos de eventos de detecção de agrupamento de ônibus de mesma linha (\textbf{busB}) foram definidos um por ônibus e utilizaram como fonte os tipos de evento de filtro de velocidade (\textbf{vi}), os quais foram definidos um por linha. Com isso, era possível agrupar todos os tipos de eventos de detecção de agrupamento de ônibus de uma mesma linha para a execução numa mesma instância de \texttt{CEP Worker}, minimizando a carga de entrada em cada instância no sistema. Como descrito no Capítulo \ref{cap:experimento}, dos 15.729 tipos de eventos criados, 14.121 eram de detecção de agrupamento de ônibus. Esse cenário, teoricamente, favoreceria o uso do algoritmo de balanceamento por Similaridade de Entrada. Contudo, isso não foi observado nos experimentos, já que os dois algoritmos resultaram em tempos médios de uso de recursos similares. \todo{Não se esqueça de corrigir a primeira parte deste parágrafo, que explica errado o que algoritmo faz. O alg não minimiza a carga de entrada de cada instância, ele tenta evitar a duplicação da transmissão de eventos para os nós. }
+%Na rede de processamento desenvolvida para o experimento, os tipos de eventos de detecção de agrupamento de ônibus de mesma linha (\textbf{busB}) foram definidos um por ônibus e utilizaram como fonte os tipos de evento de filtro de velocidade (\textbf{vi}), os quais foram definidos um por linha. Com isso, era possível agrupar todos os tipos de eventos de detecção de agrupamento de ônibus de uma mesma linha para a execução numa mesma instância de \texttt{CEP Worker}, minimizando a carga de entrada em cada instância no sistema. Como descrito no Capítulo \ref{cap:experimento}, dos 15.729 tipos de eventos criados, 14.121 eram de detecção de agrupamento de ônibus. Esse cenário, teoricamente, favoreceria o uso do algoritmo de balanceamento por Similaridade de Entrada. Contudo, isso não foi observado nos experimentos, já que os dois algoritmos resultaram em tempos médios de uso de recursos similares. \todo{Não se esqueça de corrigir a primeira parte deste parágrafo, que explica errado o que algoritmo faz. O alg não minimiza a carga de entrada de cada instância, ele tenta evitar a duplicação da transmissão de eventos para os nós. }
 %, com o desempenho do algoritmo de Similaridade de Entrada minimamente pior que o do algoritmo de Uso de Estado.
 
-A diferença no número de instâncias criadas por cada algoritmo pode ser atribuída à diferença de velocidade de realocação dos tipos de eventos. O algoritmo de balanceamento por Uso de Estado seleciona os tipos de eventos cujo estado pode ser mais rapidamente reconstruído e, consequentemente, mais rapidamente realocado. Para a rede de processamento do experimento, selecionar para a realocação tipos de eventos que podem ser mais rapidamente realocados foi tão eficiente quanto selecionar para realocação tipos de eventos de forma que a carga de eventos de entrada em cada \texttt{CEP Worker} fosse minimizada\todo{O alg não minimiza carga de entrada!!!}. Logo, a velocidade de realocação de tipos de eventos foi um dos principais fatores para determinar o número de instâncias usados no experimento, pois em nenhum momento foi detectado que havia mais de duas instâncias em sobrecarga forte ao mesmo tempo\todo{Mas onde o leitor pode verificar isso que você está falando? Qual gráfico mostra que não havia mais do que duas instâncias em sobrecarga? os gráficos da figura \ref{fig:workers_and_events_SU} o numero de workers nunca passa de 5, enquanto os gráficos da figura \ref{fig:workers_and_events_IS} dois chegam a seis workers}. Caso essa situação fosse detectada, uma nova instância seria criada para lidar com as três\todo{por que três? pq as três primeiras que estavam cadastrando os tipos de eventos antes do envio dos eventos de entrada são as mais propensas a atingirem sobrecarga} em sobrecarga forte, como descrito na Seção \ref{sub-sec:cep-worker-func}\todo{essa seção citada diz que "quando o número de instâncias em sobrecarga forte é maior que o número de instâncias que não estão em nenhuma sobrecarga, uma nova instância de cep worker é requisitada". Então, a discussão depende tb de saber quantas instâncias não estão em sobrecarga. E isso você não menciona aqui. }. A realocação mais rápida de eventos pelo uso do algoritmo de balanceamento por Uso de Recursos minimizou o número de instâncias em sobrecarga forte em qualquer momento da execução. 
-\todo[inline]{Fernando, como conversamos por vídeo na sexta, essa explicação no parágrafo acima precisa ser revista, ou talvez retirada do texto mesmo. O raciocínio baseado na história das 3 instâncias em sobrecarga não está nada claro e não se apoia nos gráficos apresentados ao leitor. }
+%A diferença no número de instâncias criadas por cada algoritmo pode ser atribuída à diferença de velocidade de realocação dos tipos de eventos. O algoritmo de balanceamento por Uso de Estado seleciona os tipos de eventos cujo estado pode ser mais rapidamente reconstruído e, consequentemente, mais rapidamente realocado. Para a rede de processamento do experimento, selecionar para a realocação tipos de eventos que podem ser mais rapidamente realocados foi tão eficiente quanto selecionar para realocação tipos de eventos de forma que a carga de eventos de entrada em cada \texttt{CEP Worker} fosse minimizada\todo{O alg não minimiza carga de entrada!!!}. Logo, a velocidade de realocação de tipos de eventos foi um dos principais fatores para determinar o número de instâncias usados no experimento, pois em nenhum momento foi detectado que havia mais de duas instâncias em sobrecarga forte ao mesmo tempo\todo{Mas onde o leitor pode verificar isso que você está falando? Qual gráfico mostra que não havia mais do que duas instâncias em sobrecarga? os gráficos da figura \ref{fig:workers_and_events_SU} o numero de workers nunca passa de 5, enquanto os gráficos da figura \ref{fig:workers_and_events_IS} dois chegam a seis workers}. Caso essa situação fosse detectada, uma nova instância seria criada para lidar com as três\todo{por que três? pq as três primeiras que estavam cadastrando os tipos de eventos antes do envio dos eventos de entrada são as mais propensas a atingirem sobrecarga} em sobrecarga forte, como descrito na Seção \ref{sub-sec:cep-worker-func}\todo{essa seção citada diz que "quando o número de instâncias em sobrecarga forte é maior que o número de instâncias que não estão em nenhuma sobrecarga, uma nova instância de cep worker é requisitada". Então, a discussão depende tb de saber quantas instâncias não estão em sobrecarga. E isso você não menciona aqui. }. A realocação mais rápida de eventos pelo uso do algoritmo de balanceamento por Uso de Recursos minimizou o número de instâncias em sobrecarga forte em qualquer momento da execução. 
+%\todo[inline]{Fernando, como conversamos por vídeo na sexta, essa explicação no parágrafo acima precisa ser revista, ou talvez retirada do texto mesmo. O raciocínio baseado na história das 3 instâncias em sobrecarga não está nada claro e não se apoia nos gráficos apresentados ao leitor. }
 %O algoritmo de Similaridade de Entrada, utilizando-se do fato de vários destes tipos de eventos terem como fonte o mesmo tipo de evento de filtro de velocidade, tentou aloca-los no mesmo cep worker, atingindo um desempenho similar ao de algoritmo de Uso de Estado em relação ao custo computacional do experimento.
 
 \section{Número de Eventos Detectados}
@@ -597,7 +597,11 @@ A vazão e o número de eventos detectados pelo experimento são dependentes da 
 
 %ou seja, só dependem da velocidade de emissão de eventos pelo produtor de eventos em uso .\todo{O que vem depois do "ou seja",  está errado. Primeiro porque não diz a mesma coisa dita na primeira parte da frase. Segundo porque, se não tem janela, a qtde detectada NÃO muda com a velocidade de entrada. } 
 
-A o tempo médio de uso de recursos computacionais pelas instâncias de \texttt{CEP Worker} em cada execução do experimento não foi expressivamente diferente para o dois algoritmos de balanceamento de carga, sendo de  $1.049,2 \pm 4,51$ minutos para o Algoritmo de balanceamento por Similaridade de Entrada e $1.045,56 \pm 5,04$ minutos para o algoritmo de balanceamento por Uso de Estado. Portanto, no cenário usado no experimento, o uso de um algoritmo de balanceamento de carga não foi expressivamente mais eficaz que o outro na economia de recursos computacionais. Como discutido na Seção \ref{sec:resource_usage_time}, uma possível explicação é que a alta velocidade de realocação dos tipos de eventos é um fator tão importante quanto a minimização da transmissão de eventos entre instâncias distintas\todo{Conforme já conversamos, essa explicação é incorreta, porque o alg não faz essa minimização. O que ele faz é, na escolha do tipo de evento para realocação, privilegiar os tipos que não causam ou que causam menos a duplicação de fluxos de entrada}.  O uso do Algoritmo \ref{alg:relocation_resource_usage} permite que os tipos de eventos sejam realocados mais rapidamente e este fator foi tão eficiente quanto o agrupamento de tipos de eventos que utilizam os mesmos tipos de entrada, como feito pelo Algoritmo \ref{alg:relocation_similarity}\todo{As duas últimas frases estão se repetindo. Mas uma delas compara a "importância de fatores", algo que não me parece pertinente, porque você não fez execuções do experimento em que os dois algoritmos são usados ao mesmo tempo, para avaliar qual "pesou" mais nos resultados. }.
+A o tempo médio de uso de recursos computacionais pelas instâncias de \texttt{CEP Worker} em cada execução do experimento não foi expressivamente diferente para o dois algoritmos de balanceamento de carga, sendo de  $1.049,2 \pm 4,51$ minutos para o Algoritmo de balanceamento por Similaridade de Entrada e $1.045,56 \pm 5,04$ minutos para o algoritmo de balanceamento por Uso de Estado. Portanto, no cenário usado no experimento, o uso de um algoritmo de balanceamento de carga não foi expressivamente mais eficaz que o outro na economia de recursos computacionais. Como discutido na Seção \ref{sec:resource_usage_time}, uma possível explicação é que a alta velocidade de realocação dos tipos de eventos é um fator importante para minimizar o intervalo de tempo que cada instância se mantêm em sobrecarga. Como todas as execuções do experimento que utilizaram o algoritmo de balanceamento de carga por uso de estado chegaram a um máximo de cinco instâncias ativas ao mesmo tempo, de acordo com o mecanismo de requisição de novas instâncias descrito na Seção \ref{sec:cepworker}, em nenhum momento três das cinco instâncias estavam em sobrecarga forte ao mesmo tempo, ou seja, o uso do algoritmo propiciou um máximo de duas instâncias em sobrecarga forte em qualquer momento ao longo do experimento
+
+Em comparação, o algoritmo de balanceamento de carga por Similaridade de Entrada buscava minimizar o número de eventos entrando em cada instância em sobrecarga forte, como descrito na Seção \ref{sec:cepworker}. As execuções do experimento com esse algoritmo não buscavam necessariamente selecionar os tipos de eventos que seriam mais rapidamente realocados e levaram a um máximo de seis instâncias de \texttt{CEP Worker} ativas em alguns casos. No entanto, a diferença em tempo de uso das instâncias médio foi similar entre o uso de um algoritmo de balanceamento de carga e o outro.
+
+\todo[inline]{Conforme já conversamos, essa explicação é incorreta, porque o alg não faz essa minimização. O que ele faz é, na escolha do tipo de evento para realocação, privilegiar os tipos que não causam ou que causam menos a duplicação de fluxos de entrada}.  
 
 %\todo[inline]{Ao longo do capítulo todo, você escreveu coisas como "expressivamente diferente" e "diferença expressiva". Anote aí que alguém da banca de defesa vai te perguntar o que significa "expressivo" nesse contexto.  ;)  Quando uma diferença seria considerada expressiva no contexto do seu experimento?  - Eu disse que nenhum é expressiva, pois é uma das unicas afirmações que eu posso fazer. Não Expressiva significando que não é intuitivamente e visivelvelmente diferente, ao contrario de uma diferença significativa que eu teria que provar usando os testes de estatista. Eu não sei que outro tipo de analise eu posso fazer sobre os resultados.}
 
